#HCAA-10 Finished header

--- a/index.html
+++ b/index.html
@@ -4,14 +4,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Semi+Expanded" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-
-Hello World!
-
-
-
-
+    <header>
+        <div class="header_logo">
+            <img src="Images/logo.png" />
+            <div class="header_logo_heading">
+                <h4>Morz Transport</h4>
+                <h5>Cargo &amp; logistic</h5>
+            </div>
+        </div>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Company</li>
+                <li>Services</li>
+                <li>News &amp; Media</li>
+                <li>Resources</li>
+                <li>Features</li>
+                <li>Contacts</li>
+            </ul>
+        </nav>    
+    </header>
 </body>
 </html>
