#HCAA-11 Finished main

--- a/index.html
+++ b/index.html
@@ -28,5 +28,11 @@
             </ul>
         </nav>    
     </header>
+
+    <main>
+        <h1>Consultancy</h1>
+        <hr>
+    </main>
+
 </body>
 </html>
