#HCAA-10 Made changes in header

--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-    <header>
-        <div class="header_logo">
-            <img src="Images/logo.png" />
-            <div class="header_logo_heading">
+    <header class="header">
+        <div class="header__logo">
+            <div class="header__img">
+                <img src="Images/logo.png" />
+            </div>
+            <div class="header__name">
                 <h4>Morz Transport</h4>
                 <h5>Cargo &amp; logistic</h5>
             </div>
         </div>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Company</li>
-                <li>Services</li>
-                <li>News &amp; Media</li>
-                <li>Resources</li>
-                <li>Features</li>
-                <li>Contacts</li>
-            </ul>
+        <nav class="header__menu"> 
+            <a href="#">Home</a>
+            <a href="#">Company</a>
+            <a href="#">Services</a>
+            <a href="#">News &amp; Media</a>
+            <a href="#">Resources</a>
+            <a href="#">Features</a>
+            <a href="#">Contacts</a>
         </nav>    
     </header>
 
