#HCAA-12 Finished section Stats

--- a/index.html
+++ b/index.html
@@ -34,5 +34,36 @@
         <hr>
     </main>
 
+    <section class="stats-section"> 
+        <div class="stats-section__column stats-section__column--first">
+            <h3>Warehousing</h3>
+            <ul>
+                <li><a href="#">Contract Logistics</a></li>
+                <li><a href="#">Value Added Services</a></li>
+                <li><a href="#">Warehouse Logistics</a></li>
+                <li><a href="#">Consultancy</a></li>
+            </ul>
+            <div class="stats-section__brochure">
+                <h4>Brochure</h4>
+                <p>Working from home meant we could vary snack and coffe breaks.</p>
+                <a href="#" class="stats-section_btn">Download PDF</a>
+            </div>
+        </div>
+        <div class="stats-section__column stats-section__column--second">
+            <div>
+                <h2><span>How</span> can we help?</h2>
+            </div> 
+            <hr>
+            <h4>Stats &amp; Charts</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, in sint, alias eligendi architecto corporis mollitia ut possimus eaque rem maiores a beatae molestiae, doloremque adipisci non laboriosam maxime magni?Laudantium iusto eligendi neque eum perferendis inventore dicta consectetur. Laborum tempore neque sunt ab maxime repellendus fugiat exercitationem nisi beatae? <br><br>
+               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, ducimus. Laudantium iusto eligendi neque eum perferendis inventore dicta consectetur. Laborum tempore neque sunt ab maxime repellendus fugiat exercitationem nisi beatae?Laudantium iusto eligendi neque eum perferendis inventore dicta consectetur. Laborum tempore neque sunt ab maxime repellendus fugiat exercitationem nisi beatae?<br><br>
+               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum provident similique voluptate consequuntur distinctio laborum itaque dignissimos labore quidem optio tempore tenetur voluptas expedita cumque repellat debitis, incidunt quo nostrum?Laudantium iusto eligendi neque eum perferendis inventore dicta consectetur. Laborum tempore neque sunt ab maxime repellendus fugiat exercitationem nisi beatae?</p>
+        </div>
+        <div class="stats-section__column stats-section__column--third">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error accusantium quidem consequuntur! Odio, vitae suscipit?</p>
+            <img src="Images/chart.png" />
+        </div>
+    </section>
+
 </body>
 </html>
