--- a/index.html
+++ b/index.html
@@ -65,5 +65,34 @@
         </div>
     </section>
 
+    <section class="solutions-section">
+        <div class="solutions-section__column solutions-section__column--first">
+            <h4>Let's help you!</h4>
+            <p>United States<br>
+            Call us: +(123) 1800-567-8990<br>
+            office@example.com<br>
+            New York, 10 Hudson Yards</p>
+            <a href="#">Or fill our form</a>
+        </div>
+        <div class="solutions-section__column solutions-section__column--second">
+            <h2><span>Our</span> Solutions</h2>
+            <hr>
+            <div class="solutions-section__chemicals">
+                <div>
+                    <h4>Chemicals</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim esse eos amet soluta eius reiciendis?</p>
+                </div>
+                <div>
+                    <h4>Chemicals</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim esse eos amet soluta eius reiciendis?</p>
+                </div>
+                <div>
+                    <h4>Chemicals</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim esse eos amet soluta eius reiciendis?</p>
+                </div>       
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
