#HCAA-14 Finished section Expertise

--- a/index.html
+++ b/index.html
@@ -94,5 +94,16 @@
         </div>
     </section>
 
+    <section class="expertise-section">
+        <h2><span>Our</span> Expertise</h2>
+        <hr>
+        <h4>Commercial</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quae ducimus obcaecati! Iure, asperiores! Assumenda, rem distinctio minima nemo veritatis in accusamus quis voluptate explicabo blanditiis, earum asperiores maxime mollitia.<br><br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quae ducimus obcaecati! Iure, asperiores! Assumenda, rem distinctio minima nemo veritatis in accusamus quis voluptate explicabo blanditiis, earum asperiores maxime mollitia.<br><br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quae ducimus obcaecati! Iure, asperiores! Assumenda, rem distinctio minima nemo veritatis in accusamus quis voluptate explicabo blanditiis, earum asperiores maxime mollitia.</p>
+        <h4>Technical</h4>
+        <h4>Localization</h4>
+    </section>
+
 </body>
 </html>
