#HCAA-15 Finished section Info

--- a/index.html
+++ b/index.html
@@ -105,5 +105,23 @@
         <h4>Localization</h4>
     </section>
 
+    <section class="info-section">
+        <div class="info-section__part info-section__part--left">
+            <h4>Delivered on time with no hassle.</h4>
+            <a href="#"><img src="Images/facebook.png" /></a>
+            <a href="#"><img src="Images/twitter.png" /></a>
+            <a href="#"><img src="Images/linkedin.png" /></a>
+            <a href="#"><img src="Images/googleplus.png" /></a>
+            <a href="#"><img src="Images/youtube.png" /></a>
+        </div>
+        <div class="info-section__part info-section__part--right">
+            <h5>Keep up to date:</h5>
+            <div>
+                <p>Email Address</p>
+                <a href="#">Sign me up!</a>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
