#HCAA-16 Finished footer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Morz Transport</title>
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Semi+Expanded" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
@@ -122,6 +122,18 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <p>&copy; 2018 Transportion &amp; Logistics Theme by VamTam / All rights reserved</p>
+        <nav>
+            <ul>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms &amp; Conditions</a></li>
+                <li><a href="#">Site map</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>           
+        </nav>
+    </footer>
 
 </body>
 </html>
