#HCAA-19 Updated class names

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-    <header class="header">
-        <div class="header__logo">
-            <div class="header__img">
+    <header class="mt-c-header">
+        <div class="mt-c-header__logo">
+            <div class="mt-c-header__img">
                 <img src="Images/logo.png" />
             </div>
-            <div class="header__name">
+            <div class="mt-c-header__name">
                 <h4>Morz Transport</h4>
                 <h5>Cargo &amp; logistic</h5>
             </div>
         </div>
-        <nav class="header__menu"> 
+        <nav class="mt-c-header__menu"> 
             <a href="#">Home</a>
             <a href="#">Company</a>
             <a href="#">Services</a>
@@ -29,13 +29,13 @@
         </nav>    
     </header>
 
-    <main>
+    <section class="mt-c-consultancy">
         <h1>Consultancy</h1>
         <hr>
-    </main>
+    </section>
 
-    <section class="stats-section"> 
-        <div class="stats-section__column stats-section__column--first">
+    <section class="mt-l-stats-section"> 
+        <div class="mt-c-stats-section__column mt-c-stats-section-column--first">
             <h3>Warehousing</h3>
             <ul>
                 <li><a href="#">Contract Logistics</a></li>
@@ -43,13 +43,13 @@
                 <li><a href="#">Warehouse Logistics</a></li>
                 <li><a href="#">Consultancy</a></li>
             </ul>
-            <div class="stats-section__brochure">
+            <div class="mt-c-stats-section__brochure">
                 <h4>Brochure</h4>
                 <p>Working from home meant we could vary snack and coffe breaks.</p>
                 <a href="#" class="stats-section_btn">Download PDF</a>
             </div>
         </div>
-        <div class="stats-section__column stats-section__column--second">
+        <div class="mt-c-stats-section__column mt-c-stats-section-column--second">
             <div>
                 <h2><span>How</span> can we help?</h2>
             </div> 
@@ -59,14 +59,14 @@
                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, ducimus. Laudantium iusto eligendi neque eum perferendis inventore dicta consectetur. Laborum tempore neque sunt ab maxime repellendus fugiat exercitationem nisi beatae?Laudantium iusto eligendi neque eum perferendis inventore dicta consectetur. Laborum tempore neque sunt ab maxime repellendus fugiat exercitationem nisi beatae?<br><br>
                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum provident similique voluptate consequuntur distinctio laborum itaque dignissimos labore quidem optio tempore tenetur voluptas expedita cumque repellat debitis, incidunt quo nostrum?Laudantium iusto eligendi neque eum perferendis inventore dicta consectetur. Laborum tempore neque sunt ab maxime repellendus fugiat exercitationem nisi beatae?</p>
         </div>
-        <div class="stats-section__column stats-section__column--third">
+        <div class="mt-c-stats-section__column mt-c-stats-section-column--third">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error accusantium quidem consequuntur! Odio, vitae suscipit?</p>
             <img src="Images/chart.png" />
         </div>
     </section>
 
-    <section class="solutions-section">
-        <div class="solutions-section__column solutions-section__column--first">
+    <section class="mt-l-solutions-section">
+        <div class="mt-c-solutions-section__column mt-c-solutions-section-column--first">
             <h4>Let's help you!</h4>
             <p>United States<br>
             Call us: +(123) 1800-567-8990<br>
@@ -74,10 +74,10 @@
             New York, 10 Hudson Yards</p>
             <a href="#">Or fill our form</a>
         </div>
-        <div class="solutions-section__column solutions-section__column--second">
+        <div class="mt-c-solutions-section__column mt-c-solutions-section-column--second">
             <h2><span>Our</span> Solutions</h2>
             <hr>
-            <div class="solutions-section__chemicals">
+            <div class="mt-c-solutions-section__chemicals">
                 <div>
                     <h4>Chemicals</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim esse eos amet soluta eius reiciendis?</p>
@@ -94,7 +94,7 @@
         </div>
     </section>
 
-    <section class="expertise-section">
+    <section class="mt-l-expertise-section">
         <h2><span>Our</span> Expertise</h2>
         <hr>
         <h4>Commercial</h4>
@@ -105,8 +105,8 @@
         <h4>Localization</h4>
     </section>
 
-    <section class="info-section">
-        <div class="info-section__part info-section__part--left">
+    <section class="mt-l-info-section">
+        <div class="mt-u-info-section__part mt-c-info-section-part--left">
             <h4>Delivered on time with no hassle.</h4>
             <a href="#"><img src="Images/facebook.png" /></a>
             <a href="#"><img src="Images/twitter.png" /></a>
@@ -114,7 +114,7 @@
             <a href="#"><img src="Images/googleplus.png" /></a>
             <a href="#"><img src="Images/youtube.png" /></a>
         </div>
-        <div class="info-section__part info-section__part--right">
+        <div class="mt-u-info-section__part mt-c-info-section-part--right">
             <h5>Keep up to date:</h5>
             <div>
                 <p>Email Address</p>
