--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="mt-c-header">
         <div class="mt-c-header__logo">
             <div class="mt-c-header__img">
-                <img src="Images/logo.png" />
+                <img src="images/logo.png" />
             </div>
             <div class="mt-c-header__name">
                 <h4>Morz Transport</h4>
@@ -28,7 +28,7 @@
             <a href="#">Contacts</a>
         </nav>    
     </header>
-
+<main>
     <section class="mt-c-consultancy">
         <h1>Consultancy</h1>
         <hr>
@@ -61,7 +61,7 @@
         </div>
         <div class="mt-c-stats-section__column mt-c-stats-section-column--third">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error accusantium quidem consequuntur! Odio, vitae suscipit?</p>
-            <img src="Images/chart.png" />
+            <img src="images/chart.png" />
         </div>
     </section>
 
@@ -104,15 +104,15 @@
         <h4>Technical</h4>
         <h4>Localization</h4>
     </section>
-
+</main>
     <section class="mt-l-info-section">
         <div class="mt-u-info-section__part mt-c-info-section-part--left">
             <h4>Delivered on time with no hassle.</h4>
-            <a href="#"><img src="Images/facebook.png" /></a>
-            <a href="#"><img src="Images/twitter.png" /></a>
-            <a href="#"><img src="Images/linkedin.png" /></a>
-            <a href="#"><img src="Images/googleplus.png" /></a>
-            <a href="#"><img src="Images/youtube.png" /></a>
+            <a href="#"><img src="images/facebook.png" /></a>
+            <a href="#"><img src="images/twitter.png" /></a>
+            <a href="#"><img src="images/linkedin.png" /></a>
+            <a href="#"><img src="images/googleplus.png" /></a>
+            <a href="#"><img src="images/youtube.png" /></a>
         </div>
         <div class="mt-u-info-section__part mt-c-info-section-part--right">
             <h5>Keep up to date:</h5>
