#HCAA-18 Finished responsive design mobile version

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <div class="mt-c-stats-section__column mt-c-stats-section-column--third">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error accusantium quidem consequuntur! Odio, vitae suscipit?</p>
             <img src="images/chart.png" />
+            <a href="#">View chart</a>
         </div>
     </section>
 
