--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
         </div>
         <div class="mt-u-info-section__part mt-c-info-section-part--right">
             <h5>Keep up to date:</h5>
-            <div>
-                <p>Email Address</p>
-                <a href="#">Sign me up!</a>
-            </div>
+            <form action="#">
+                <input type="email" placeholder="Email Adress" name="Email" class="email" >
+                <input type="submit" value="Sign me up!" class="submit">
+            </form>
         </div>
     </section>
 
