#HCAA-24 Zavrsne izmene

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <hr>
     </section>
 
-    <section class="mt-l-stats-section"> 
+    <section class="mt-c-stats-section"> 
         <div class="mt-c-stats-section__column mt-c-stats-section-column--first">
             <h3>Warehousing</h3>
             <ul>
@@ -95,7 +95,7 @@
         </div>
     </section>
 
-    <section class="mt-l-expertise-section">
+    <section class="mt-c-expertise-section">
         <h2><span>Our</span> Expertise</h2>
         <hr>
         <h4>Commercial</h4>
@@ -106,14 +106,16 @@
         <h4>Localization</h4>
     </section>
 </main>
-    <section class="mt-l-info-section">
+    <section class="mt-c-info-section">
         <div class="mt-u-info-section__part mt-c-info-section-part--left">
             <h4>Delivered on time with no hassle.</h4>
-            <a href="#"><img src="images/facebook.png" /></a>
-            <a href="#"><img src="images/twitter.png" /></a>
-            <a href="#"><img src="images/linkedin.png" /></a>
-            <a href="#"><img src="images/googleplus.png" /></a>
-            <a href="#"><img src="images/youtube.png" /></a>
+            <nav>
+                <a href="#"><img src="images/facebook.png" /></a>
+                <a href="#"><img src="images/twitter.png" /></a>
+                <a href="#"><img src="images/linkedin.png" /></a>
+                <a href="#"><img src="images/googleplus.png" /></a>
+                <a href="#"><img src="images/youtube.png" /></a>
+            </nav>
         </div>
         <div class="mt-u-info-section__part mt-c-info-section-part--right">
             <h5>Keep up to date:</h5>
@@ -124,7 +126,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer class="mt-c-footer">
         <p>&copy; 2018 Transportion &amp; Logistics Theme by VamTam / All rights reserved</p>
         <nav>
             <ul>
