#HCAA-2 Made changes in sass architecture

--- a/index.html
+++ b/index.html
@@ -5,29 +5,26 @@
     <meta charset="UTF-8">
     <title>Morz Transport</title>
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Semi+Expanded" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
-<body>
-    <header class="mt-c-header">
-        <div class="mt-c-header__logo">
-            <div class="mt-c-header__img">
-                <img src="images/logo.png" />
-            </div>
-            <div class="mt-c-header__name">
-                <h4>Morz Transport</h4>
-                <h5>Cargo &amp; logistic</h5>
-            </div>
+<body class="mt-l-main-layout">
+
+    <header class="mt-l-main-layout__header">
+        <div class="mt-c-header">
+            <img src="images/logo.png" />
         </div>
-        <nav class="mt-c-header__menu"> 
-            <a href="#">Home</a>
-            <a href="#">Company</a>
-            <a href="#">Services</a>
-            <a href="#">News &amp; Media</a>
-            <a href="#">Resources</a>
-            <a href="#">Features</a>
-            <a href="#">Contacts</a>
-        </nav>    
     </header>
+            
+    <nav class="mt-c-navbar"> 
+        <a href="#">Home</a>
+        <a href="#">Company</a>
+        <a href="#">Services</a>
+        <a href="#">News &amp; Media</a>
+        <a href="#">Resources</a>
+        <a href="#">Features</a>
+        <a href="#">Contacts</a>
+    </nav>    
+    
 <main>
     <section class="mt-c-consultancy">
         <h1>Consultancy</h1>
